--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </ul>
     <script id="movie-template" type="text/x-handlebars-template">
       <li>
+        <div><img src="{{poster}}" alt="{{title}}"></div>
         <h3>{{title}}</h3>
         <p>{{type}}</p>
         <h4>Titlo Originale: {{title_orginal}}</h4>
