Aggiunto not found

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <p>Media voto: {{{vote}}}</p>
       </li>
     </script>
+
+    <script id="not-found-template" type="text/x-handlebars-template">
+      <li>La ricerca non ha prodotto risultati</li>
+    </script>
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
